# ghost_monkey

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  RUST_IMPLEMENTATION_GUIDE.md  RUST_SPEC.md  audit.toml  client.nim  config.nims  deny.toml  ghost_monkey.nimble  go.mod  justfile  llms.txt  mkdocs.yml  requirements.txt
.cursor/rules/: build-automation.mdc  documentation.mdc  nim-development.mdc  project-structure.mdc  security-testing.mdc
.github/: commit-instructions.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  copilot-setup-steps.yml  docs.yml  security.yml
.kiro/hooks/: ci-auto-fix.kiro.hook  code-quality-check.kiro.hook  docs-sync-hook.kiro.hook  markdown-format-fix.kiro.hook  rust-code-analyzer.kiro.hook  rust-perf-optimizer.kiro.hook  rust-security-hardening.kiro.hook  update-llms-txt.kiro.hook
.kiro/specs/core-networking-protocol/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: ARCHITECTURE.md  api.md  book.toml  contributing.md  index.md  installation.md  legal.md  safety.md  usage.md
docs/src/: SUMMARY.md  introduction.md
docs/src/appendices/: README.md  legal-disclaimer.md
docs/src/ch01-getting-started/: README.md  first-run.md  installation.md  quick-start.md  safety-guidelines.md
docs/src/ch02-architecture/: README.md  client-implant.md  connection-modes.md  overview.md  protocol-stack.md
docs/src/ch03-networking/: README.md  nat-traversal.md  network-protocol-crate.md  tcp-fundamentals.md
docs/src/ch04-cryptography/: README.md  chacha20-poly1305.md  encryption-basics.md  forward-secrecy.md  key-exchange.md
docs/src/ch05-implementation/: README.md  client-implementation.md  code-walkthrough.md  implant-implementation.md  protocol-handling.md  tui-interface.md
docs/src/ch06-cross-platform/: README.md  cargo-zigbuild.md  platform-specific.md
docs/src/ch07-security/: README.md  defensive-measures.md  detection-evasion.md  legal-compliance.md
docs/src/ch08-exercises/: README.md  custom-modifications.md  lab-environments.md  oscp-scenarios.md
docs/src/ch09-advanced/: README.md  extending-protocols.md
src/: implant.nim  lib.rs
src/client/: main.rs
src/implant/: main.rs
src/protocol/: handler.rs  message.rs  mod.rs  security.rs  state.rs
src/transport/: config.rs  manager.rs  mod.rs
tests/: test_client.nim  test_implant.nim
