[package]
name = "ghost_monkey"
version = "0.1.0"
edition = "2024"
authors = ["Ghost Monkey Contributors"]
description = "Educational UNIX backdoor for authorized penetration testing and OSCP preparation"
license = "MIT"
repository = "https://github.com/ghost-monkey/ghost-monkey"
keywords = ["networking", "security", "education", "penetration-testing"]
categories = ["network-programming", "cryptography"]
rust-version = "1.85"

# Configuration for cargo-zigbuild cross-compilation
[package.metadata.cross]
# Enable cross-compilation support
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH",
]

# Cargo-zigbuild configuration
[package.metadata.zigbuild]
# Enable Zig-based cross-compilation for better compatibility
enabled = true

# Binary targets
[[bin]]
name = "ghost-client"
path = "src/client/main.rs"

[[bin]]
name = "ghost-implant"
path = "src/implant/main.rs"

[dependencies]

# Error handling
anyhow = "1.0.100"
# Core networking and protocol
network-protocol = "1.0.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
# Testing framework enhancements
cargo-nextest = "0.9.104"
criterion = { version = "0.7.0", features = ["html_reports"] }
insta = { version = "1.43.2", features = ["json", "yaml"] }
proptest = "1.8.0"

# Additional testing utilities
tokio-test = "0.4.4"

[profile.bench]
debug = true
